# AIVLE-paper-review-study

./: README.md
papers/: .gitkeep
presentations/: .gitkeep
presentations/250529/: CAG_demo.ipynb
presentations/250605/: README.md
presentations/250605/Liquid/: Liquid_demo.ipynb  README.md  constants.py  expand_vocabulary.py  mm_utils.py  pyproject.toml
presentations/250605/Liquid/data_process/: convert_DCLM_data.py  convert_imagepair_cc512.py  extract_vqcodes.sh  packing_imagepairs.py
presentations/250605/Liquid/data_process/vqgan/: image_tokenizer.py
presentations/250605/Liquid/evaluation/: app.py  inference_i2t.py  inference_it2i.py  inference_t2i.py  inference_t2t.py
presentations/250605/Liquid/evaluation/T2I_Eval/: eval_genai.sh  eval_genai_527.py  eval_mjhq.sh  genaibench_generation.py  get_fid.py  mjhq_generation.py  prompts.txt
presentations/250605/Liquid/evaluation/VQA_Eval/: convert_vqav2_for_submission.py  gqa.sh  model_vqa_loader.py  pope.sh  textvqa.sh  vqav2.sh
presentations/250605/Liquid/evaluation/chameleon/inference/: image_tokenizer.py
presentations/250605/Liquid/liquid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
presentations/250605/Liquid/scripts/: gemma7b_mixpretrain.sh
presentations/250605/Liquid/train/: llava_trainer.py  train.py  train_mem.py  train_xformers.py
